--- a/data/readme
+++ b/data/readme
@@ -1,3 +1,3 @@
-IMCS-V2_dev1.json文件中的内容是从实际文件中摘取的,若是想获取完整的数据集,请到此链接处下载https://tianchi.aliyun.com/dataset/95414.
+IMCS-V2_dev1.json文件中的内容是从实际文件中摘取的,若是想获取完整的数据集【IMCS-V2-MRG.zip】,请到此链接处下载https://tianchi.aliyun.com/dataset/95414.
 
-The content in the IMCS-V2_dev1.json file is extracted from the actual file. If you want to obtain the complete data set, please download it from this link https://tianchi.aliyun.com/dataset/95414
+The content in the IMCS-V2_dev1.json file is extracted from the actual file【IMCS-V2-MRG.zip】. If you want to obtain the complete data set, please download it from this link https://tianchi.aliyun.com/dataset/95414
